<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.striveonger.study</groupId>
    <artifactId>data-hamal</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1</version>

    <name>Data-Hamal</name>
    <url>https://gitee.com/striveonger/data-hamal</url>
    <description>我们不生产数据，我们只是数据的搬运工</description>

    <properties>
        <data-hamal.version>0.0.1</data-hamal.version>

        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-cloud.version>2021.0.4</spring-cloud.version>
        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
        <spring-boot.version>2.7.4</spring-boot.version>
        <hutool.version>5.8.6</hutool.version>
        <sa-token.version>1.31.0</sa-token.version>
        <mybatis.version>3.5.10</mybatis.version>
        <mybatis-plus.version>3.5.2</mybatis-plus.version>
        <mysql-connector.version>8.0.30</mysql-connector.version>
        <freemarker.version>2.3.31</freemarker.version>
        <knife4j.version>2.0.9</knife4j.version>
        <hikari.version>5.0.1</hikari.version>
        <curator.version>5.2.0</curator.version>
        <junit.version>5.9.1</junit.version>
        <junit.platform.version>1.9.1</junit.platform.version>
    </properties>

    <modules>
        <module>data-hamal-gateway</module>
        <module>data-hamal-auth</module>
        <module>data-hamal-commons</module>
        <module>data-hamal-services</module>
        <module>data-hamal-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <!-- SpringCloud 微服务 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringCloud Alibaba 微服务 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringBoot 依赖配置 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- hutool 的依赖配置-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--Sa Token 配置-->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-core</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!-- Mybatis 依赖配置 -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${spring-boot.mybatis}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-annotation</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- MySQL 驱动 -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector.version}</version>
            </dependency>

            <!-- 数据库连接池 -->
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${hikari.version}</version>
            </dependency>

            <!-- 引入Knife4j的官方start包,Swagger2基于Springfox2.10.5项目 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- Zookeeper -->
            <dependency>
                <groupId>org.apache.curator</groupId>
                <artifactId>curator-recipes</artifactId>
                <version>${curator.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>log4j</artifactId>
                        <groupId>log4j</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- Data Hamal -->
            <dependency>
                <groupId>com.striveonger.study</groupId>
                <artifactId>data-hamal-commons-core</artifactId>
                <version>${data-hamal.version}</version>
            </dependency>
            <dependency>
                <groupId>com.striveonger.study</groupId>
                <artifactId>data-hamal-commons-mybatis</artifactId>
                <version>${data-hamal.version}</version>
            </dependency>
            <dependency>
                <groupId>com.striveonger.study</groupId>
                <artifactId>data-hamal-commons-swagger</artifactId>
                <version>${data-hamal.version}</version>
            </dependency>
            <dependency>
                <groupId>com.striveonger.study</groupId>
                <artifactId>data-hamal-commons-tools</artifactId>
                <version>${data-hamal.version}</version>
            </dependency>



            <!-- JUnit5 -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>${junit.platform.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>